# qlm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  the-mount-listing-research.html
.github/workflows/: ci.yml  release-plz.yml
src/: client.rs  embedding.rs  lance.rs  lib.rs  main.rs  udaf.rs  udf.rs  validation.rs
testdata/: sample.csv  sample.json
tests/: cli_e2e.rs  client_integration.rs
